templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bajwa-service
  labels:
    app: bajwa
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
    name: http
  selector:
    app: bajwa
